--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     testImplementation (
+            'com.github.javafaker:javafaker:1.0.2',
             'com.codeborne:selenide:6.9.0',
             'org.slf4j:slf4j-simple:1.7.30',
             'org.junit.jupiter:junit-jupiter:5.8.2')
